test/compile_errors/err_async_no_runtime.w
//! expect-error: requires the fiber runtime
//! args: --no-runtime --no-prelude

async fn bad -> i32:
    42
